--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
+    "react-router-dom": "^6.11.2",
     "reflect-metadata": "^0.1.13",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
