Eject GitHub pages.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "quranic-corpus",
   "version": "0.1.0",
-  "homepage": "https://kaisdukes.github.io/wbw-prototype",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -70,9 +69,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": [
@@ -93,8 +90,7 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "gh-pages": "^5.0.0"
+    "babel-plugin-transform-typescript-metadata": "^0.3.2"
   },
   "jest": {
     "roots": [
