--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
-    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.11.2",
@@ -90,7 +89,8 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-transform-typescript-metadata": "^0.3.2"
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "react-dev-utils": "^12.0.1"
   },
   "jest": {
     "roots": [
